MongoDB & Get Request Fixes

--- a/build.gradle
+++ b/build.gradle
@@ -26,9 +26,9 @@ targetCompatibility = 1.8
 
 dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
- 	testCompile('org.springframework.boot:spring-boot-starter-test')
- 	testCompile('org.springframework.boot:spring-boot-starter-test')
-    testCompile('com.jayway.jsonpath:json-path')
-    testCompile('org.mongodb:mongodb-driver:3.3.0')
+ 	compile('org.springframework.boot:spring-boot-starter-test')
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+    compile('com.jayway.jsonpath:json-path')
+    compile('org.mongodb:mongodb-driver:3.3.0')
 }
 
