--- a/build.gradle
+++ b/build.gradle
@@ -28,6 +28,8 @@ dependencies {
     compile("org.springframework.boot:spring-boot-starter-web")
  	compile('org.springframework.boot:spring-boot-starter-test')
 	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+	compile ("io.springfox:springfox-swagger-ui:2.7.0")
+    compile ("io.springfox:springfox-swagger2:2.7.0")
     compile('com.jayway.jsonpath:json-path')
     compile('org.mongodb:mongodb-driver:3.3.0')
 }
