--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'farfetch-toogle'
+    baseName = 'diff'
     version =  '0.1.0'
 }
 
@@ -25,12 +25,13 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
+    runtime('com.h2database:h2')
     compile("org.springframework.boot:spring-boot-starter-web")
  	compile('org.springframework.boot:spring-boot-starter-test')
-	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
+ 	 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
+	
 	compile ("io.springfox:springfox-swagger-ui:2.7.0")
     compile ("io.springfox:springfox-swagger2:2.7.0")
     compile('com.jayway.jsonpath:json-path')
-    compile('org.mongodb:mongodb-driver:3.3.0')
 }
 
