--- a/build.gradle
+++ b/build.gradle
@@ -13,7 +13,7 @@ apply plugin: 'idea'
 apply plugin: 'org.springframework.boot'
 
 jar {
-    baseName = 'diff'
+    baseName = 'farfetch-toogle'
     version =  '0.1.0'
 }
 
@@ -25,13 +25,12 @@ sourceCompatibility = 1.8
 targetCompatibility = 1.8
 
 dependencies {
-    runtime('com.h2database:h2')
     compile("org.springframework.boot:spring-boot-starter-web")
  	compile('org.springframework.boot:spring-boot-starter-test')
- 	 	compile("org.springframework.boot:spring-boot-starter-data-jpa")
-	
+	compile("org.springframework.boot:spring-boot-starter-data-mongodb")
 	compile ("io.springfox:springfox-swagger-ui:2.7.0")
     compile ("io.springfox:springfox-swagger2:2.7.0")
     compile('com.jayway.jsonpath:json-path')
+    compile('org.mongodb:mongodb-driver:3.3.0')
 }
 
